--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.17.2",
+  "version": "0.18.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -16,76 +16,74 @@
     "eslint": "eslint src/**/*.js"
   },
   "dependencies": {
-    "@casl/ability": "^6.1.1",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^2.6.1",
     "@sentry/node": "^7.69.0",
-    "@tinymce/tinymce-react": "^4.3.0",
-    "axios": "^1.5.0",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.40.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cookie-signature": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-hbs": "^2.4.2",
-    "fomantic-ui-css": "^2.9.3",
-    "formik": "^2.4.5",
-    "glob": "^8.1.0",
-    "highcharts": "^11.1.0",
+    "@tinymce/tinymce-react": "^6.1.0",
+    "axios": "^1.8.3",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.0",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
+    "cookie-signature": "^1.2.2",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-hbs": "^2.5.0",
+    "fomantic-ui-css": "^2.9.4",
+    "formik": "^2.4.6",
+    "glob": "^11.0.2",
+    "highcharts": "^12.1.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^7.5.2",
+    "mongoose": "^8.14.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.5",
-    "passport": "^0.6.0",
+    "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "prop-types": "^15.8.1",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
+    "query-string": "^9.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-google-recaptcha": "^3.1.0",
-    "react-intl": "^6.4.7",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1",
-    "redux-promise-middleware": "^6.1.3",
-    "redux-thunk": "^2.4.2",
-    "semantic-ui-react": "^2.1.4",
-    "validator": "^13.11.0",
+    "react-intl": "^7.1.11",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.6.0",
+    "redux": "^5.0.1",
+    "redux-promise-middleware": "^6.2.0",
+    "semantic-ui-react": "^3.0.0-beta.2",
+    "validator": "^13.12.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.26.10",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-transform-runtime": "^7.22.15",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-react": "^7.22.15",
+    "@babel/plugin-transform-runtime": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@faker-js/faker": "^8.0.2",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^10.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.1",
-    "eslint": "^8.49.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.7.6",
+    "mini-css-extract-plugin": "^2.9.2",
     "npm-run-all": "^4.1.5",
-    "pm2": "^5.3.0",
-    "supertest": "^6.3.3",
-    "terser-webpack-plugin": "^5.3.9",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.9.0"
+    "pm2": "^6.0.5",
+    "supertest": "^7.0.0",
+    "terser-webpack-plugin": "^5.3.14",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-merge": "^6.0.1"
   },
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@4.7.0"
 }
